--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.110.1"
+python-decouple = "^3.8"
+passlib = "^1.7.4"
+uvicorn = "^0.29.0"
+sqlalchemy = "^2.0.29"
+psycopg2-binary = "^2.9.9"
+pytest = "^8.1.1"
+alembic = "^1.13.1"
+python-jose = "^3.3.0"
+python-multipart = "^0.0.9"
 
 
 [build-system]
