--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=adminpass
 POSTGRES_DB=main
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 DB_URL=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
 TEST_MODE=False
